<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<cn.mmt.app.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        />
	<TextView
	    android:id="@+id/textView1"
	    style="@style/TitleTextStule"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="20dp"
	    android:layout_marginTop="56dp"
	    android:text="@string/codetext"
	    android:textColor="@color/mobiletextview" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textView1"
	    android:layout_below="@+id/textView1"
	    android:layout_marginTop="18dp"
	    style="@style/TitleTextStule"
	    android:textColor="@color/mobiletextview"
	    android:text="@string/codetext" />

	<EditText
	    android:id="@+id/mobilenum1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/textView2"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="39dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:background="@drawable/login_content"
	    android:ems="10"
	    android:hint="@string/mobie_code"
	    android:padding="10dp" />

	<EditText
	    android:id="@+id/EditText01"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/mobilenum1"
	    android:layout_marginTop="24dp"
	    android:background="@drawable/mobile_login_content"
	    android:ems="10"
	    android:hint="@string/nickname"
	    android:padding="10dp" />

	<EditText
	    android:id="@+id/EditText02"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_alignParentLeft="true"
	    android:inputType="textPassword"
	    android:layout_below="@+id/EditText01"
	    android:background="@drawable/mobile_login_content2"
	    android:ems="10"
	    android:hint="@string/least_six"
	    android:padding="10dp" />

	<TextView
	    android:id="@+id/textView3"
	    style="@style/TitleTextStule"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/next"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="72dp"
	    android:text="@string/again"
	    android:textColor="@color/mobiletextview" />

	<Button
	    android:id="@+id/next"
	    style="@style/TitleTextStule"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	   	android:layout_marginLeft="10dp"
	    android:layout_marginRight="20dp"
	    android:layout_alignLeft="@+id/EditText02"
	    android:layout_below="@+id/EditText02"
	    android:layout_marginTop="40dp"
	    android:background="@drawable/mobile_login"
	    android:text="@string/login" />

</RelativeLayout>