<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
     
    <ImageView 
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/meeting_logo"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_content"
        android:layout_marginBottom="20dp"
        />
    <LinearLayout
        android:id="@+id/login_content" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/login_content"
        android:layout_marginLeft="40dp"
    	android:layout_marginRight="40dp"
    	android:layout_centerInParent="true">
        <TextView 
            android:id="@+id/txt_phone_number"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_numb_login"
            android:drawableLeft="@drawable/ico_book"
            android:gravity="center"/>
        <TextView 
            
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"/>
        <TextView 
            android:id="@+id/txt_xl_weibo"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xl_weibo_login"
            android:drawableLeft="@drawable/sina_blog"
            android:gravity="center"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"/>
        <TextView 
            android:id="@+id/txt_tx_weibo"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_weibo_login"
            android:drawableLeft="@drawable/qq_blog"
            android:gravity="center"/>
    </LinearLayout>
	<Button
	    android:id="@+id/btn_try_out"
	    style="@style/TitleTextStule"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    android:layout_below="@+id/login_content"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="35dp"
	    android:background="@drawable/mobile_login"
	    android:text="@string/btn_try_out" />
</RelativeLayout>